[metadata]
name = lexicomb
version = attr: bbpyp.__nspkg_meta__.__version__
url=https://github.com/BloggerBust/lexicomb
project_urls =
    Source = https://github.com/BloggerBust/lexicomb
    Issues = https://github.com/BloggerBust/lexicomb/issues
description=Lexicomb - a lexicon keyword programming language
long_description = file: README.md
long_Description_Content_Type = text/markdown; charset=UTF-8; CommonMark
author = Trevor Wilson
author_email = trevor.wilson@bloggerbust.ca
license = Apache License v2.0
license_file = LICENSE-2.0.txt
classifiers =
    Development Status :: 2 - Pre-Alpha
    Topic :: Software Development
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
keywords =
    Blogger Bust
    lexicomb
    lexer
    parser
    combinator
    lexon
    tag system

[options]
zip_safe = False
python_requires = >=3.6,<3.8
install_requires =
    bbpyp==0.0.3.dev2
namespace_packages =
    bbpyp
packages = find_namespace:

[options.packages.find]
include =
    bbpyp
    bbpyp.*
